delete snapshot
